# re2

./: CMakeLists.txt  MODULE.bazel  WORKSPACE.bazel
python/: BUILD.bazel  _re2.pyi  mypy.ini  re2.pyi  setup.py
python/re2/: native.py  native.pyi  wrapper.py  wrapper.pyi
re2/: dfa.cc  prog.h  re2.cc  re2.h
